# Cute-Gemm-Optimization

./: .gitignore  .gitmodules  README.md
cublas/: gemm  gemm.cu  makefile
figures/: figs.ipynb
flashdecoding/: .clangd  CMakeLists.txt
flashdecoding/.cache/clangd/index/: block_info.h.9436C2E5279A4861.idx  cpu_reference.h.083A16FFED123F48.idx  decode.cuh.E1C10D9710BA4172.idx  flash.h.3F78636CE7C581AB.idx  kernel_traits.h.AC14FB1474EA4484.idx  mask.h.2C4E0EB09DC57B7A.idx  philox.cuh.5E0D7D74F039AAD5.idx  softmax.h.93E996B661660D69.idx  static_switch.h.66C712992806E741.idx  test_single_decode.cu.AB6C9CF3D8DCD2A9.idx  utils.h.A16181394535F69C.idx
flashdecoding/src/: bench_single_decode.cu  block_info.h  cpu_reference.h  decode.cuh  flash.h  flash_api.h  flash_fwd_kernel.h  flash_fwd_launch_template.h  kernel_traits.h  test.ipynb  test_single_decode.cu  utils.h
flashdecoding/src/include/: flash.h  kernel_traits.h  softmax.h  utils.h
gemm/gemm_predicate/: Makefile  gemm  gemm.cu
gemm/gemm_split_shm/: Makefile  gemm.cu
gemm/gemm_stream-k/: Makefile  config.hpp  gemm  gemm_kernel.hpp  main.cu  tile_scheduler_utils.hpp
gemm/gemm_v1/: Makefile  gemm  gemm.cu
gemm/gemm_v2/: Makefile  gemm  gemm.cu
gemm/gemm_v4/: Makefile  gemm.cu
gemm/hopper/gemm_test/: gemm  gemm.cu
gemm/hopper/gemm_wgmma_rs/: gemm  gemm.cu  utils.h
gemm/hopper/gemm_wgmma_ss/: Makefile  gemm  gemm.cu
gemm/print_layout/: Makefile  layout  layout.cu
gemm_v1/: gemm  gemm.cu
gemm_v2/: gemm.cu  ncu.sh
gemm_v3/: Makefile  gemm.cu
gemv/fast_gemv/: Makefile  gemv  gemv.cu
gemv/gemv_cute/: gemv  gemv.cu
gemv/gemv_torch/: gemv.py
gemv/gemv_v1/: Makefile  gemv  gemv.cu
gemv/gemv_zhifu/: Makefile  Sgemv_v1.cu  gemv
others/dequant/: Makefile  dequant  dequant.cu  helper.h  lop3.cu  unfused_weight_dequantize.hpp
others/ldsm/: main.cu  makefile
others/tile_copy/: Makefile  copy  tiled_copy.cu
print_layout/: layout  layout.cu
sm90_decode/: CMakeLists.txt
sm90_decode/src/: bench_single_decode.cu  flash_api.h  flash_fwd_hdim128_fp16_sm80.cu  flash_fwd_kernel.h  flash_fwd_launch_template.h  test_single_decode.cu
sm90_decode/src/include/: mask.h  static_switch.h
